syntax = "proto3";

package auth;

service AuthService {
  rpc ResendVerification (ResendVerificationRequest) returns (Empty) {}
  rpc VerifyAccount (VerifyAccountRequest) returns (AuthResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken (RefreshTokenRequest) returns (LoginResponse) {}
  rpc RequestPasswordReset (RequestPasswordResetRequest) returns (Empty) {}
  rpc ResetPassword (ResetPasswordRequest) returns (AuthResponse) {}
  rpc GetMe (GetMeRequest) returns (GetMeResponse) {}
  rpc Logout (LogoutRequest) returns (LogoutResponse) {}
}

message Empty {}

message RegisterUserRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string school = 6;
}

message ResendVerificationRequest {
  string email = 1;
}

message VerifyAccountRequest {
  string token = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string userAgent = 3;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string token = 1;
  string newPassword = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message GetMeRequest {
  string token = 1;
}

message GetMeResponse {
  AuthResponse user = 1;
}

message Device {
  string deviceId = 2;
  string ipAddress = 3;
  string userAgent = 4;
  optional string location = 5;
}

message AuthResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string role = 5;
  string school = 6;
  bool isActive = 7;
  optional string lastActive = 8;
  bool mfaEnabled = 9;
  optional string mfaSecret = 10;
  repeated Device devices = 11;
  repeated string notifications = 12;
  optional string lastPasswordChanged = 13;
  optional string resetPasswordToken = 14;
  optional string resetPasswordExpires = 15;
  optional string resetRequestedAt = 16;
  optional int32 resetRequestCount = 17;
  optional string resetBlockedUntil = 18;
  bool isVerified = 19;
  optional string verificationToken = 20;
  optional string verificationTokenExpires = 21;
  optional string verificationRequestedAt = 22;
  optional int32 verificationRequestCount = 23;
  optional string verificationBlockedUntil = 24;
  bool isDeleted = 25;
  optional string refreshToken = 26;
  optional string createdAt = 27;
  optional string updatedAt = 28;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
  AuthResponse user = 3;
}